# chaoscontrol

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  run_all.sh  run_mc_experiments.sh  run_resume.sh  run_with_shutdown.sh  setup.py
analysis/: promote_winners.py
archive/round1/: FINAL_REPORT.md  (+2 more)
benchmarks/: bench_fused_block.py  bench_ssm_scan.py
docs/: crct-architecture.md  crct-controller-architecture.md  paper-skeleton.md
experiments/: OVERNIGHT_SUMMARY.md  _23_fast_path_runner_helpers.py
paper_results/: README.md  canonical_configs.json
scripts/: analyze_step3_v3_diagnostics.py  build_exp20_val_cache.py  build_sp_shards.py  eval_quant.py  exp21_analyze.py  exp21_register_all.py  fetch_sp16384_dataset.py  paper_results.py  pod_bootstrap.sh  pod_build_native_extensions.sh  pod_setup_cuda13.sh  prepare_sgns_inits.py  run_exp20_eval.py  run_exp20_fast_score.py  run_exp20_full_val_score.py  run_exp22_temporal_heads.py  run_packet_online_cache_compare.py  sgns_intrinsic_report.py  simplex_bootstrap_microbench.py  stream_docs_selected.py  train_sgns.py  verify_sp16384_eval_cache.py
tests/: test_action_history.py  test_action_space_trace_logging.py  test_activation_checkpoint.py  test_admission_trace_logging.py  test_alignment.py  test_amx_matmul.py  test_amx_matmul_vnni_packing.py  test_artifact.py  test_attention_control_block.py  test_avx512_matops.py  test_avx512_recurrence.py  test_baselines.py  test_bucket_affinity.py  test_build_exp20_val_cache.py  test_build_matrix_phase1.py  test_build_sp_shards.py  test_cache_utility.py  test_calc_type_packet_online_cache.py  test_causal_slot.py  test_cd_config_threading.py  test_chaos_attention_block.py  test_chunked_cross_entropy.py  test_chunked_lm_backward.py  test_config.py  test_config_exp14.py  test_controller_distillation.py  test_controller_main.py  test_controller_pretrain.py  test_controller_weight_dump.py  test_core.py  test_core_fused.py  test_cpu_capability_detection.py  test_cpu_evidence_engine.py  test_cpu_ssm_controller_runtime.py  test_crct_distributed.py  test_crct_runner_integration.py  test_credit_attribution.py  test_credit_recency.py  test_criticality_distillation.py  test_criticality_scoring.py  (+153 more)
tools/: benchmark_batch.py  bootstrap_pod.sh  debug_eval.py  exp24_best_bpb.py  fast_prep.sh  overnight_exp19_21.sh  pod_bootstrap.sh  pod_session.sh  poll_exp13_exp12.sh  poll_exp14.sh  poll_experiment11.sh  prep_data.sh  run_exp18_all.sh  runpod.py  watchdog_experiment.sh  watchdog_remote.sh
(+1169 files in other folders)
