[project]
name = "chaoscontrol"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["torch>=2.0", "numpy", "pyyaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning:importlib._bootstrap",
    "ignore:builtin type Swig:DeprecationWarning",
]
