[build-system]
# setuptools supports hybrid pyproject + setup.py builds, which we need
# because we ship a C++ extension (``src/chaoscontrol/kernels/_cublaslt``)
# built via ``torch.utils.cpp_extension``. The ext_modules wiring lives
# in repo-root ``setup.py``; project metadata (below) stays declarative
# here. Editable installs on pods MUST pass ``--no-build-isolation`` so
# torch is visible during the ext build.
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "semanticengine-ssm"
version = "0.2.0"
description = "Biologically-inspired SSM with typed semantic routing, episodic/semantic memory, structured sleep consolidation, and metabolic gating"
requires-python = ">=3.11"
dependencies = ["torch>=2.0", "numpy", "pyyaml", "sentencepiece"]

[project.optional-dependencies]
mamba = ["mamba-ssm>=2.3.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"'), used for GPU microbenches",
    "scalar_path_only: marks tests that validate scalar/non-accelerated fallback behavior and should be deselected on accelerated H100/SPR sweeps",
]
filterwarnings = [
    "ignore::DeprecationWarning:importlib._bootstrap",
    "ignore:builtin type Swig:DeprecationWarning",
    "ignore:`torch\\.jit\\.script_method` is not supported in Python 3\\.14\\+:DeprecationWarning:torch\\.jit\\._script",
]
